Created custom site folder

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
     <p>A change</p>
 
-    <a href="ThreeMonthsEvents/index.html">Three Months Events</a>
+    <a href="ThreeMonthsEvents/index.html">Three Months Events</a> <br>
 
+    <a href="03 Follow Along/index.html">03 Follow Along</a>
 </body>
 </html>
