More random stuff

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
     <a href="ThreeMonthsEvents/index.html">Three Months Events</a> <br>
 
-    <a href="03 Follow Along/index.html">03 Follow Along</a>
+    <a href="03 Follow Along/index.html">03 Follow Along</a> <br>
 
-    <a href="03 Hand Coding HTML/index.html">Hand Coding</a>
+    <a href="03 Hand Coding HTML/index.html">Hand Coding</a> <br>
 
-    <a href="04 Follow Along/index.html">04 Follow Along</a>
+    <a href="04 Follow Along/index.html">04 Follow Along</a> <br>
 </body>
 </html>
