05 follow along complete

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     
     <h1>Website Directory</h1>
 
-    <p>A change</p>
 
     <a href="ThreeMonthsEvents/index.html">Three Months Events</a> <br>
 
@@ -18,5 +17,7 @@
     <a href="03 Hand Coding HTML/index.html">Hand Coding</a> <br>
 
     <a href="04 Follow Along/index.html">04 Follow Along</a> <br>
+
+    <a href="05 Follow Along/index.html">05 Follow Along</a> <br>
 </body>
 </html>
