--- a/index.html
+++ b/index.html
@@ -19,5 +19,7 @@
     <a href="04 Follow Along/index.html">04 Follow Along</a> <br>
 
     <a href="05 Follow Along/index.html">05 Follow Along</a> <br>
+    
+    <a href="05 images/index.html">05 Images</a>
 </body>
 </html>
