--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 
     <a href="05 Follow Along/index.html">05 Follow Along</a> <br>
     
-    <a href="05 images/index.html">05 Images</a>
+    <a href="05 images/index.html"></a>
 </body>
 </html>
