--- a/05 images/index.html
+++ b/05 images/index.html
@@ -10,21 +10,22 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Prata&family=Workbench&display=swap" rel="stylesheet">
-    <title>IRON LUNG: Home Page</title>
+    <title>IRON LUNG: Gallery</title>
 </head>
 <body style="background-color: #022601;">
    
     <header>
-        <span>THE IRON LUNG</span>
+        <span>THE IRON LUNG </span>
     </header>
     
      <nav>
         <ul>s
-            <li class="active"><a href="index.html">The Story</a></li>
+            <li class="active"><a href="index.html">The Gallery</a></li>
         </ul>
     </nav>
     
     <main>
+        <figure class="wrapped"></figure>
                 <img src="Screenshot 2025-10-29 at 11.52.51 AM.webp"alt="THE BLOOD OCEAN."
          width="400" height="265">
         <figcaption>THE BLOOD OCEAN</figcaption>
@@ -32,6 +33,18 @@
         <img src="Screenshot 2025-10-29 at 11.44.22 AM.png"alt="THE SM-13 SUBMARINE."
          width="400" height="265">
         <figcaption>THE SM-13 SUBMARINE</figcaption>
+
+        <img src="Screenshot 2025-11-06 at 11.49.22 AM.png"alt="LONG FISH LIKE SKULL WITH RIBCAGE.">
+            <figcaption>FOSSEL FOUND</figcaption>
+        <img src="Screenshot 2025-11-06 at 11.52.41 AM.png"alt="ANGLER FISH CREATURE.">
+<figcaption>THE CREATURE</figcaption>
+        <img src="Screenshot 2025-11-06 at 11.53.26 AM.png"alt="STRIPED TENTACLES.">
+        <figcaption>TENDRILS FOUND</figcaption>
+        <img src="Screenshot 2025-11-06 at 11.54.04 AM.png"alt="ONE BIG ROCK ON THE LEFT AND HALF A DOZEN SHARP ROCKS ON THE RIGHT.">
+<figcaption>IMAGE FOUND</figcaption>
+        <img src="Screenshot 2025-11-06 at 11.54.10 AM.png"alt="UNIDENTIFIABLE STRUCTURE".>
+        <figcaption>IMAGE FOUND</figcaption>
+        </figure>
     </main>
     <footer>
         <p>&copy; 2025 IRON LUNG &bull; Braycen Cramm &bull; Web Essentials</p>
