--- a/05 images/index.html
+++ b/05 images/index.html
@@ -34,15 +34,25 @@
          width="400" height="265">
         <figcaption>THE SM-13 SUBMARINE</figcaption>
 
-        <img src="Screenshot 2025-11-06 at 11.49.22 AM.png"alt="LONG FISH LIKE SKULL WITH RIBCAGE.">
+        <img src="Screenshot 2025-10-29 at 11.58.25 AM.webp" alt="THE SM-8.">
+        <figcaption>THE SM-8.</figcaption>
+
+        <img src="Screenshot 2025-11-06 at 11.49.22 AM.png"alt="LONG FISH LIKE SKULL WITH RIBCAGE."
+        width="400" height="265">
             <figcaption>FOSSEL FOUND</figcaption>
-        <img src="Screenshot 2025-11-06 at 11.52.41 AM.png"alt="ANGLER FISH CREATURE.">
+
+        <img src="Screenshot 2025-11-06 at 11.52.41 AM.png"alt="ANGLER FISH CREATURE."
+        width="400" height="345">
 <figcaption>THE CREATURE</figcaption>
-        <img src="Screenshot 2025-11-06 at 11.53.26 AM.png"alt="STRIPED TENTACLES.">
+
+        <img src="Screenshot 2025-11-06 at 11.53.26 AM.png"alt="STRIPED TENTACLES."
+        width="400" height="265">
         <figcaption>TENDRILS FOUND</figcaption>
-        <img src="Screenshot 2025-11-06 at 11.54.04 AM.png"alt="ONE BIG ROCK ON THE LEFT AND HALF A DOZEN SHARP ROCKS ON THE RIGHT.">
+        <img src="Screenshot 2025-11-06 at 11.54.04 AM.png"alt="ONE BIG ROCK ON THE LEFT AND HALF A DOZEN SHARP ROCKS ON THE RIGHT."
+        width="400" height="265">
 <figcaption>IMAGE FOUND</figcaption>
-        <img src="Screenshot 2025-11-06 at 11.54.10 AM.png"alt="UNIDENTIFIABLE STRUCTURE".>
+        <img src="Screenshot 2025-11-06 at 11.54.10 AM.png"alt="UNIDENTIFIABLE STRUCTURE."
+        width="400" height="400">
         <figcaption>IMAGE FOUND</figcaption>
         </figure>
     </main>
